# ecbrates

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO  compile_commands.json
.github/workflows/: cmake.yml
cmake/: compiler_flags.cmake  externals.cmake  options.cmake  toolchain-arm.cmake  version_info.cmake
scripts/: get_rates.sh
src/: CMakeLists.txt  Const.hpp  Currency_Value.hpp  Data_Loader.cpp  Data_Loader.hpp  Data_Source.hpp  Ecb.cpp  Ecb.hpp  Error.hpp  Exceptions.hpp  Log.cpp  Log.hpp  Logging.cpp  Logging.hpp  Main.cpp  Main_Fetcher.cpp  Main_Server.cpp  Main_Signals.cpp  Main_Signals.hpp  Prices.hpp  Rates.cpp  Rates.hpp  Record.cpp  Record.hpp  Result.hpp  Server.cpp  Server.hpp  Server_Impl.cpp  Server_Impl.hpp  Symbol.hpp  Time_Point.cpp  Time_Point.hpp  Timepoint.cpp  Timepoint.hpp  Urls.hpp  Utils.cpp  Utils.hpp  Version.cpp.in  Version.hpp  VersionInfo.cpp.in  (+4 more)
tests/: CMakeLists.txt  Ecb_Tests.cpp  Rates_Tests.cpp  Record_Tests.cpp  Time_Point_Tests.cpp  Utils_Tests.cpp  ecb.cpp  perf.cpp  test_utils.hpp  utils.cpp
tests/data/: daily.xml
