FILE(GLOB TEST_SOURCES *.cpp)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/externals/googletest ${CMAKE_CURRENT_BINARY_DIR}/googletest)

ADD_EXECUTABLE(ecbrates_test ${TEST_SOURCES})
TARGET_LINK_LIBRARIES(ecbrates_test ecb_lib ${EXTERNALS_LIBRARIES} gtest_main)
TARGET_INCLUDE_DIRECTORIES(ecbrates_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
SET_PROPERTY(TARGET ecbrates_test PROPERTY CXX_STANDARD 17)

ADD_CUSTOM_COMMAND(TARGET ecbrates_test POST_BUILD COMMAND ecbrates_test WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)

